# ajinomoto-dekstop-formulation

./: .env  .env.example  .gitignore  README.md  check-version.js  index.html  package-lock.json  package.json  todo.txt  tsconfig.json  vite.config.ts
public/: template-report.xlsx
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/be/configurations/: App.yaml  App.yaml.example
src-tauri/resources/pr/: .env
src-tauri/resources/pr/pkg/node-printer/: package-lock.json  package.json  printer.go  printer.js
src-tauri/resources/sc/: .env
src-tauri/resources/sc/views/: index.html  styles.css
src-tauri/resources/sy/: .env  .env.example
src-tauri/src/: main.rs
src/__tests__/react/: formDialogScanFormula.spec.tsx  homepage.spec.tsx  masterProduct.spec.tsx
src/actions/: application.action.ts  auth.action.ts  container.action.ts  formulation.action.ts  license.action.ts  masters.action.ts  product.action.ts  raw-material-stock.action.ts  reports.action.ts  settings.action.ts  tolerance.action.ts  units.action.ts  websocket.action.ts
src/components/: Breadcrumbs.tsx  ContainerLayout.tsx  DialogVirtualKeyboard.tsx  ErrorBoundaryLayout.tsx  Footer.tsx  FormDialogScanFormula.tsx  FormDialogScanFormulaManual.tsx  Layout.tsx  MastersLayout.tsx  Navbar.tsx  PaginationTable.tsx  RouteNotFound.tsx  Sidebar.tsx  Spinner.tsx  ThemeMode.tsx  VirtualKeyboard.tsx  test.json  testing.tsx
src/hooks/: useDebounceHook.tsx  useProgressValue.tsx
src/lib/: formatter.ts  helpers.ts  tem.json
(+107 files in other folders)
