[package]
name = "prisma-formulation"
version = "0.1.0"
description = "Prisma Formulation"
authors = ["PT. Intitek Presisi Integrasi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "devtools"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.winres]
windows_subsystem = "windows"
